--- a/frontend/src/blocks/header/__button/header__button.css
+++ b/frontend/src/blocks/header/__button/header__button.css
@@ -14,3 +14,10 @@
 .header__button:hover {
   opacity: 0.6;
 }
+
+@media screen and (max-width: 425px){
+  .header__button {
+    font-size: 14px;
+    line-height: 17px;
+  }
+}
