--- a/frontend/src/blocks/header/__container/header__container.css
+++ b/frontend/src/blocks/header/__container/header__container.css
@@ -2,3 +2,10 @@
   display: flex;
   column-gap: 24px;
 }
+
+@media screen and (max-width: 700px){
+  .header__container {
+    flex-direction: column;
+    row-gap: 18px;
+  }
+}
