--- a/frontend/src/blocks/header/__email/header__email.css
+++ b/frontend/src/blocks/header/__email/header__email.css
@@ -4,3 +4,10 @@
   line-height: 22px;
   margin: 0;
 }
+
+@media screen and (max-width: 425px){
+  .header__email {
+    font-size: 14px;
+    line-height: 17px;
+  }
+}
